--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postbuild": "npm run rss && npm run sitemap"
   },
   "dependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/node": "18.11.9",
@@ -37,8 +38,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
+    "rehype-code-titles": "^1.1.0",
     "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
     "typescript": "4.9.3"
   },
