--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "contentlayer": "^0.2.9",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "contentlayer": "^0.3.4",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "globby": "^13.1.2",
-    "next": "13.0.3",
-    "next-contentlayer": "^0.2.9",
+    "next": "^13.4.19",
+    "next-contentlayer": "^0.3.4",
     "next-seo": "^5.14.1",
     "next-themes": "^0.2.1",
-    "prettier": "^2.7.1",
+    "prettier": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reading-time": "^1.5.0",
@@ -45,12 +45,16 @@
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
-    "typescript": "4.9.3"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
