--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "contentlayer": "^0.3.4",
+    "date-fns": "^3.0.6",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "globby": "^13.1.2",
@@ -42,11 +43,13 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.1.0",
+    "rehype-pretty-code": "^0.10.0",
     "rehype-prism-plus": "^1.5.0",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
+    "swr": "^2.2.4",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
