refactor: update to nextjs 14 with app router directory, restructure the codebase and architecture, under migrating to app router

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/s3822042"
   },
   "workspaces": [
-    "apps/*"
+    "src/*"
   ],
   "scripts": {
     "build": "turbo run build",
