--- a/src/www/.env
+++ b/src/www/.env
@@ -6,4 +6,13 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # -----------------------------------------------------------------------------
 # Database
 # -----------------------------------------------------------------------------
-DATABASE_URL=
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=6500
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password123
+POSTGRES_DB=personal_blog
+
+DATABASE_URL=postgresql://postgres:password123@localhost:6500/personal_blog?schema=public
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=password123
