--- a/src/www/package.json
+++ b/src/www/package.json
@@ -25,6 +25,11 @@
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.18.0",
+    "@trpc/client": "^10.45.1",
+    "@trpc/react-query": "^10.45.1",
+    "@trpc/server": "^10.45.1",
     "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -44,7 +49,7 @@
     "rehype-stringify": "^10.0.0",
     "rss": "^1.2.2",
     "shiki": "0.12.1",
-    "swr": "^2.2.5",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "unist-builder": "3.0.0",
     "unist-util-visit": "4.1.2",
