refactor: update code

--- a/src/www/.env
+++ b/src/www/.env
@@ -9,10 +9,10 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=6500
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password123
+POSTGRES_PASSWORD=Voluan1312
 POSTGRES_DB=personal_blog
 
-DATABASE_URL=postgresql://postgres:password123@localhost:6500/personal_blog?schema=public
+DATABASE_URL=postgresql://postgres:Voluan1312@localhost:6500/personal_blog?schema=public
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=password123
