--- a/src/www/package.json
+++ b/src/www/package.json
@@ -24,6 +24,7 @@
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.18.0",
     "@tanstack/react-query-devtools": "^4.18.0",
@@ -35,6 +36,7 @@
     "clsx": "^2.1.0",
     "contentlayer": "0.3.4",
     "date-fns": "^3.3.1",
+    "fuse.js": "^7.0.0",
     "geist": "^1.2.2",
     "globby": "^14.0.1",
     "next": "14.0.4",
@@ -51,8 +53,7 @@
     "shiki": "0.12.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
-    "unist-builder": "3.0.0",
-    "unist-util-visit": "4.1.2",
+    "unist-util-visit": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -62,13 +63,14 @@
     "@types/react-dom": "18.2.19",
     "esbuild": "^0.17.19",
     "eslint": "^8.41.0",
+    "mdast-util-toc": "^7.0.0",
     "postcss": "^8.4.24",
     "prisma": "^5.10.2",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-pretty-code": "^0.13.0",
+    "rehype-pretty-code": "^0.6.0",
     "remark": "^15.0.1",
     "remark-code-import": "^1.2.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
