--- a/src/www/package.json
+++ b/src/www/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
