--- a/src/www/.env
+++ b/src/www/.env
@@ -6,13 +6,14 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # -----------------------------------------------------------------------------
 # Database
 # -----------------------------------------------------------------------------
-POSTGRES_HOST=127.0.0.1
-POSTGRES_PORT=6500
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=Voluan1312
-POSTGRES_DB=personal_blog
-
-DATABASE_URL=postgresql://postgres:Voluan1312@localhost:6500/personal_blog?schema=public
+POSTGRES_URL="postgres://default:iBAtFLv20sXk@ep-empty-sun-a44y3dyt-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:iBAtFLv20sXk@ep-empty-sun-a44y3dyt-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:iBAtFLv20sXk@ep-empty-sun-a44y3dyt-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:iBAtFLv20sXk@ep-empty-sun-a44y3dyt.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-empty-sun-a44y3dyt-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="iBAtFLv20sXk"
+POSTGRES_DATABASE="verceldb"
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=password123
